--- a/Z.glade
+++ b/Z.glade
@@ -397,8 +397,7 @@
                 <property name="width_request">300</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="halign">start</property>
-                <property name="valign">start</property>
+                <property name="halign">end</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="PanelDisplayLabel">
